# snek-snaks

./: Cargo.toml  readme.md
.github/: rust.yml
assets/textures/: sneks.aseprite
src/: interpolator.rs  main.rs
src/enter_game/: mod.rs
src/game/: components.rs  effects.rs  mod.rs  prelude.rs  systems.rs
src/main_menu/: systems.rs
